# seedling-counter

./: .gitignore  main.py  pyproject.toml
src/app/: main.py
